# palisade

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  default.nix  docker.nix  shell.nix
.github/workflows/: release.yml  tests.yml
doc/: README.md  TLDR_rust.md  usage.md
github/: Cargo.toml
github/src/: lib.rs
github/testdata/: create_release.json  create_repo.json
nix/: sources.json
src/: changelog.rs  git.rs  github.rs  lib.rs  main.rs  version.rs
src/cmd/: circleci.rs  cut.rs  github_action.rs  mod.rs
testdata/: basic.md  brackets.md
tests/: elfs.rs  lib.rs
