[package]
name = "palisade"
version = "0.1.0"
authors = ["christine.dodrill <christine.dodrill@lightspeedhq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byte-unit = "3"
comrak = "0.7"
git2 = "0.13"
http = "0.2"
kankyo = "0.3"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["macros"] }
url = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
