[package]
name = "palisade"
version = "0.1.0"
authors = ["christine.dodrill <christine.dodrill@lightspeedhq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
comrak = "0.7"
git2 = "0.13"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
