[package]
name = "palisade"
version = "0.4.0"
authors = ["christine.dodrill <christine.dodrill@lightspeedhq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
comrak = "0.7"
git2 = "0.13"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
url = "2"
log = "0"
pretty_env_logger = "0"

github = { path = "./github" }

[dev-dependencies]
tempfile = "3"
names = "0.11"
elfs = "0.1"

[profile.release]
lto = true

[workspace]
members = [
  "github"
]
