[package]
name = "github"
version = "0.1.0"
authors = ["christine.dodrill <christine.dodrill@lightspeedhq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
httptest = "0.13"
tokio = { version = "0.2", features = ["full"] }